--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ main h2 {
 }
 
 .item {
-    background: #757575;
+    background: white;
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
@@ -83,7 +83,7 @@ main h2 {
     width: 100%;
     height: 240px;
     object-fit: contain; /* Ensures the image maintains its aspect ratio and shows the full image */
-    background-color: #f4f4f9; /* Optional: Adds a neutral background to fill empty space */
+    background-color: #757575; /* Optional: Adds a neutral background to fill empty space */
     border-bottom: 1px solid #ddd; /* Optional: Adds a border below the image for better separation */
 }
 
