--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Special Elite", system-ui;
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -9,15 +15,18 @@ body {
 }
 
 header {
-    background-color: #2c3e50; /* Darker blue */
+    background-color: #024554; /* Darker blue */
     color: white;
     text-align: center;
-    padding: 1.5em 0;
+    padding: 0.8em 0;
 }
 
+
 header h1 {
-    font-family: 'Cinzel Decorative', cursive;
-    font-size: 3em;
+    font-family: "Special Elite", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 4em;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -28,7 +37,7 @@ header .subtitle {
 }
 
 nav {
-    background-color: #333;
+    background-color: #53736A;
     color: white;
     padding: 1em;
 }
@@ -59,7 +68,7 @@ main {
 }
 
 main h2 {
-    color: #4a90e2;
+    color: #6A8C69;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -81,16 +90,16 @@ main h2 {
 
 .item img {
     width: 100%;
-    height: 240px;
+    height: 150px;
     object-fit: contain; /* Ensures the image maintains its aspect ratio and shows the full image */
-    background-color: #757575; /* Optional: Adds a neutral background to fill empty space */
+    background-color: #f4f4f9; /* Optional: Adds a neutral background to fill empty space */
     border-bottom: 1px solid #ddd; /* Optional: Adds a border below the image for better separation */
 }
 
 
 .item h3 {
     margin: 10px 0;
-    color: #4a90e2;
+    color: #6A8C69;
 }
 
 .item p {
@@ -104,7 +113,7 @@ main h2 {
     margin: 10px 0;
     padding: 8px 12px;
     color: white;
-    background-color: #4a90e2;
+    background-color: #A8B545;
     text-decoration: none;
     border-radius: 4px;
     font-size: 0.9em;
@@ -117,7 +126,7 @@ main h2 {
 footer {
     text-align: center;
     padding: 1em;
-    background-color: #333;
+    background-color: #53736A;
     color: white;
     margin-top: 20px;
 }
